# cpp_basic_project_setup

./: .gitmodules  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  verify_cpp_code.sh
src/business_logic/: temperature_monitor.cpp  temperature_monitor.h
src/data_providers/: data_storage.h  unimplemented_network_storage.cpp  unimplemented_network_storage.h
test/: mocks.cpp  mocks.h  temperature_monitor_test.cpp
